--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,25 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.6</version>
+		<version>3.1.5</version>
 		<relativePath />
 	</parent>
 	<groupId>br.edu.unoesc.bdii</groupId>
 	<artifactId>ExSpringLiquibase</artifactId>
-	<version>2.2.0</version>
+	<version>1.0.0</version>
 	<name>ExSpringLiquibase</name>
 	<description>Exemplo com Spring Data e Liquibase</description>
 
 	<properties>
-		<spring-boot.version>2.5.6</spring-boot.version>
-		<hibernate.version>5.6.0.Final</hibernate.version>
-		<liquibase-core.version>4.5.0</liquibase-core.version>
-		<liquibase-maven-plugin.version>4.5.0</liquibase-maven-plugin.version>
-		<liquibase-hibernate5.version>4.5.0</liquibase-hibernate5.version>
+		<spring-boot.version>3.1.5</spring-boot.version>
+		<hibernate.version>6.4.0.CR1</hibernate.version>
+		<liquibase-core.version>4.24.0</liquibase-core.version>
+		<liquibase-maven-plugin.version>4.24.0</liquibase-maven-plugin.version>
+		<liquibase-hibernate5.version>4.24.0</liquibase-hibernate5.version>
 		<validation-api.version>2.0.1.Final</validation-api.version>
-		<javassist.version>3.28.0-GA</javassist.version>
+		<javassist.version>3.29.1-GA</javassist.version>
 		<jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
+		<java.version>17</java.version>
 	</properties>
 
 	<dependencies>
@@ -72,7 +73,6 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.2.24</version>
 		</dependency>
 		
 		<dependency>
