Alterações de aula do projeto.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,7 +14,7 @@ spring:
 
   # Liquibase properties
   liquibase:
-    enabled: false
+    enabled: true
     change-log: classpath:/db/db.changelog-dev.xml
 
 ## Server Properties
